--- a/FrontEnd/templates/register.html
+++ b/FrontEnd/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'loginRegisterLayout.html' %}
 {% from 'formMacro.html' import render_field %}
 {% block form %}
-    <div class="form-container">
+    <div class="form-container_r">
         <form action="{{ url_for('auth.register') }}" method="POST" class="form-register">
             {% with messages = get_flashed_messages() %}
                 {% if messages %}
