--- a/app/templates/employee_company_calendar.html
+++ b/app/templates/employee_company_calendar.html
@@ -111,43 +111,43 @@
                         <th scope="row">SUN</th>
                         <td>{{ calendar.sunday.hours }}</td>
                         <td>{{ calendar.sunday.location }}</td>
-                        <td>{{ calendar.sunday.description }}</td>
+                        <td>{{ calendar.sunday.description[:12] }}...</td>
                       </tr>
                       <tr>
                         <th scope="row">MON</th>
                         <td>{{ calendar.monday.hours }}</td>
                         <td>{{ calendar.monday.location }}</td>
-                        <td>{{ calendar.monday.description }}</td>
+                        <td>{{ calendar.monday.description[:12] }}...</td>
                       </tr>
                       <tr>
                         <th scope="row">TUE</th>
                         <td>{{ calendar.tuesday.hours }}</td>
                         <td>{{ calendar.tuesday.location }}</td>
-                        <td>{{ calendar.tuesday.description }}</td>
+                        <td>{{ calendar.tuesday.description[:12] }}...</td>
                       </tr>
                       <tr>
                         <th scope="row">WED</th>
                         <td>{{ calendar.wednesday.hours }}</td>
                         <td>{{ calendar.wednesday.location }}</td>
-                        <td>{{ calendar.wednesday.description }}</td>
+                        <td>{{ calendar.wednesday.description[:12] }}...</td>
                       </tr>
                       <tr>
                         <th scope="row">THU</th>
                         <td>{{ calendar.thursday.hours }}</td>
                         <td>{{ calendar.thursday.location }}</td>
-                        <td>{{ calendar.thursday.description }}</td>
+                        <td>{{ calendar.thursday.description[:12] }}...</td>
                       </tr>
                       <tr>
                         <th scope="row">FRI</th>
                         <td>{{ calendar.friday.hours }}</td>
                         <td>{{ calendar.friday.location }}</td>
-                        <td>{{ calendar.friday.description }}</td>
+                        <td>{{ calendar.friday.description[:12] }}...</td>
                       </tr>
                       <tr>
                         <th scope="row">SAT</th>
                         <td>{{ calendar.saturday.hours }}</td>
                         <td>{{ calendar.saturday.location }}</td>
-                        <td>{{ calendar.saturday.description }}</td>
+                        <td>{{ calendar.saturday.description[:12] }}...</td>
                       </tr>
                     </tbody>
                   </table>
