--- a/app/static/css/employee_dashboard.css
+++ b/app/static/css/employee_dashboard.css
@@ -44,7 +44,7 @@ h2 {
 
 .company-card, .company-card-work {
     width: 100%;
-    height: 150px;
+    height: 170px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -97,6 +97,22 @@ h2 {
     padding-left: 20px;
 }
 
+.request {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
+.request form {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .company-card-svg {
     min-width: 100px;
     max-width: 100px;
@@ -117,6 +133,7 @@ h2 {
 
 /* CARD BUTTONs */
 .company-btns {
+    margin-top: 10px;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
@@ -342,7 +359,6 @@ tr td:last-child {
     border-radius: 5px;
     border: 1px solid var(--border-color);
     border-bottom: unset;
-    /* margin-top: 100px; */
     border-bottom-left-radius: 0;
     border-bottom-right-radius: 0;
 }
@@ -384,7 +400,7 @@ tr td:last-child {
 }
 
 .card-info {
-    min-height:120px;
+    min-height: 120px;
     max-height: 120px;
     display: flex;
     flex-direction: column;
@@ -424,4 +440,61 @@ tr td:last-child {
     justify-content: space-evenly;
     min-height: 200px;
     max-height: 200px;
+}
+
+@media (max-width: 750px){
+    .company-card, .company-card-work {
+        min-width: unset;
+        max-width: unset;
+        width: 400px;
+    }
+
+    .delete-account {
+        margin-bottom: 50px;
+    }
+
+    .past-calendars tbody th, .past-calendars tbody td, .current-calendar tbody th, .current-calendar tbody th {
+        min-width: unset;
+        max-width: unset;
+        min-width: 85px;
+        max-width: 100%;
+        min-height: 45px !important;
+        max-height: 45px !important;
+    }
+
+    .past-calendars tbody td:last-child, .current-calendar tbody td:last-child {
+        min-width: unset;
+        max-width: unset;
+        min-width: 85px;
+        max-width: 100%;
+        min-height: 45px !important;
+        max-height: 45px !important;
+        overflow-x: scroll;
+        overflow-y: hidden;
+    }
+
+    .week {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    tr input {
+        height: 30px;
+        min-width: 80px;
+        max-width: 80px;
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 550px){
+
+    .company-card-svg {
+        display: none;
+    }
+
+    .company-card, .company-card-work {
+        min-width: unset;
+        max-width: unset;
+        width: 300px;
+    }
 }
