--- a/app/static/css/login.css
+++ b/app/static/css/login.css
@@ -60,6 +60,7 @@
     border-bottom: 0.1px solid var(--primany-text-color);
     height: 30px;
     width: 80%;
+    font-size: 12px;
 }
 
 .input-box:focus {
@@ -80,7 +81,7 @@
 .select-box:focus {
     outline: none;
 }
-.login-btn {
+.login-btn, #login-btn {
     border: none;
     color: white;
     background: #FF0000;
@@ -94,4 +95,17 @@
     font-weight: 600;
     opacity: 90%;
     margin: 0 10px 0 10px;
+}
+
+.request-btn {
+    border: unset;
+    border: 1px solid #339933;
+    border-radius: 5px;
+    font-size: 12px;
+    background: white;
+    color: #339933;
+    font-weight: 600;
+    width: 100px;
+    height: 30px;
+    opacity: 0.7;
 }
