--- a/app/templates/company_calendars.html
+++ b/app/templates/company_calendars.html
@@ -1,7 +1,7 @@
-{% extends 'employee_layout.html' %}
+{% extends 'company_layout.html' %}
 {% block employee_calendars_style %}
     <style>
-        .item-two svg {
+        .item-one svg {
             color: #FF0000; cursor: pointer; background: #f5f5f5;
         }
     </style>
@@ -9,7 +9,7 @@
 {% block employee_calendars %}
     <main class="main-dashboard">
       <section class="past-calendars">
-        <h2>All calendars ( {{ calendars|length }} )</h2>
+        <h2>{{ employee.first_name }} {{ employee.last_name }} ( {{ calendars|length }} )</h2>
         {% for calendar in calendars %}
           <div class="cal-table">
               <div>
@@ -18,9 +18,6 @@
                     <div class="week">
                       <div class="info">
                         <span>WEEK:</span><span class="week-start">{{ calendar.week }}</span>
-                      </div>
-                      <div class="info">
-                        <span>COMPANY:</span><a id="company_name" href="{{ url_for('employee.company_calendars', company_id=calendar.company_id) }}"><span class="week-start">{{ calendar.company_name }}</span></a>
                       </div>
                       <div class="info">
                         <span>TOTAL HOURS:</span><span class="hour">{{ calendar.total_hours }}</span>
@@ -39,43 +36,43 @@
                         <th scope="row">SUN</th>
                         <td>{{ calendar.sunday.hours }}</td>
                         <td>{{ calendar.sunday.location }}</td>
-                        <td>{{ calendar.sunday.description[:12] }}...</td>
+                        <td>{{ calendar.sunday.description }}</td>
                       </tr>
                       <tr>
                         <th scope="row">MON</th>
                         <td>{{ calendar.monday.hours }}</td>
                         <td>{{ calendar.monday.location }}</td>
-                        <td>{{ calendar.monday.description[:12] }}...</td>
+                        <td>{{ calendar.monday.description }}</td>
                       </tr>
                       <tr>
                         <th scope="row">TUE</th>
                         <td>{{ calendar.tuesday.hours }}</td>
                         <td>{{ calendar.tuesday.location }}</td>
-                        <td>{{ calendar.tuesday.description[:12] }}...</td>
+                        <td>{{ calendar.tuesday.description }}</td>
                       </tr>
                       <tr>
                         <th scope="row">WED</th>
                         <td>{{ calendar.wednesday.hours }}</td>
                         <td>{{ calendar.wednesday.location }}</td>
-                        <td>{{ calendar.wednesday.description[:12] }}...</td>
+                        <td>{{ calendar.wednesday.description }}</td>
                       </tr>
                       <tr>
                         <th scope="row">THU</th>
                         <td>{{ calendar.thursday.hours }}</td>
                         <td>{{ calendar.thursday.location }}</td>
-                        <td>{{ calendar.thursday.description[:12] }}...</td>
+                        <td>{{ calendar.thursday.description }}</td>
                       </tr>
                       <tr>
                         <th scope="row">FRI</th>
                         <td>{{ calendar.friday.hours }}</td>
                         <td>{{ calendar.friday.location }}</td>
-                        <td>{{ calendar.friday.description[:12] }}...</td>
+                        <td>{{ calendar.friday.description }}</td>
                       </tr>
                       <tr>
                         <th scope="row">SAT</th>
                         <td>{{ calendar.saturday.hours }}</td>
                         <td>{{ calendar.saturday.location }}</td>
-                        <td>{{ calendar.saturday.description[:12] }}...</td>
+                        <td>{{ calendar.saturday.description }}</td>
                       </tr>
                     </tbody>
                   </table>
