change demo link

--- a/app/templates/landing_page.html
+++ b/app/templates/landing_page.html
@@ -70,7 +70,7 @@
         <section class="demo-section" id="demo-section">
             <div class="demo">
                 <h2>Demo</h2>
-                <iframe width="966" height="543" src="https://www.youtube.com/embed/QQVNVOneZNg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe width="966" height="543" src="https://www.youtube.com/watch?v=dk4y8Dn0dKI&feature=youtu.be&ab_channel=ConTimeWork" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </section>
     </main>
